Spacing issue resolved

--- a/src/app/safety/safety.component.css
+++ b/src/app/safety/safety.component.css
@@ -38,3 +38,7 @@
   h1, h2, h3, p, span {
     color: white;
   } */
+
+.givesspace{
+left:5px
+}
